# react-bot

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: docker-image.yml
src/: app.ts  config.rs  config.ts  http.rs  main.rs
