[package]
name = "react-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.19"
indexmap = { version = "1.8.0", features = ["serde"] }
serde = "1.0.136"
serde_json = { version = "1.0.72", features = ["preserve_order"] }
tokio = { version = "1.15.0", features = ["macros"] }
twilight-gateway = "0.12.1"
twilight-http = "0.12.1"
twilight-model = "0.12.2"
