[package]
name = "react-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.21"
indexmap = { version = "1.9.1", features = ["serde"] }
serde = "1.0.143"
serde_json = { version = "1.0.83", features = ["preserve_order"] }
tokio = { version = "1.20.1", features = ["macros"] }
twilight-gateway = "0.13.3"
twilight-http = "0.13.3"
twilight-model = "0.13.7"
